--- a/WebShoppingMySQL/web/register.html
+++ b/WebShoppingMySQL/web/register.html
@@ -16,10 +16,10 @@ and open the template in the editor.
             Email Address: <input type="email" name="email" required/><br/>
             Address Line 1: <input type="text" name="addr1" required/><br/>
             Address Line 2: <input type="text" name="addr2"/><br/>
-            Postal Code: <input type="text" name="postcode"/><br/>
-            Mobile Number: <input type="text" name="phone"/><br/>
-            Password: <input type="text" name="psw1"/><br/>
-            Reconfirm Password: <input type="text" name="psw2"/><br/>
+            Postal Code: <input type="text" name="postcode" required/><br/>
+            Mobile Number: <input type="text" name="phone" required/><br/>
+            Password: <input type="text" name="psw1" required/><br/>
+            Reconfirm Password: <input type="text" name="psw2" required/><br/>
             <input type="submit" value="Submit"/>
         </form>
     </body>
