--- a/WebShoppingMySQL/web/index.html
+++ b/WebShoppingMySQL/web/index.html
@@ -11,8 +11,10 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <!-- register hyper-link entry -->
         <p>Please login or <a href="register.html">Register New Account</a>
         </p>
+        <!-- login form entry -->
         <form name="user" action="login" method="get">
             Email Address:&nbsp;<input type="email" name="email" required/><br/>
             Password:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="password" name="password" required/><br/>
