--- a/WebShoppingMySQL/web/search.html
+++ b/WebShoppingMySQL/web/search.html
@@ -12,6 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <form name="user" action="search" method="get">
+            <!-- search by description -->
             Search: <input type="text" name="desc" required/><br/>
             <input type="submit" value="Submit"/>
         </form>
