--- a/WebShoppingMySQL/web/register.html
+++ b/WebShoppingMySQL/web/register.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <!-- register form -->
         <form name="user" action="validate" method="get">
             Full Name: <input type="text" name="name" required/><br/>
             Email Address: <input type="email" name="email" required/><br/>
